#
# MIT License
#
# Copyright (c) 2019-present Wasmer, Inc. and its affiliates.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

[package]
publish = false
name = "shenyu-wasm-build"
version = "0.1.0"
authors = ["zhangzicheng@apache.org"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "shenyu_wasm"

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", rev = "1.0.0" }
jni = "0.16"
